Fixes overflowing names while creating adapter

--- a/cdap-ui/app/features/adapters/etlapps.less
+++ b/cdap-ui/app/features/adapters/etlapps.less
@@ -121,6 +121,16 @@ body.theme-cdap.state-adapters-create {
 }
 body.theme-cdap.state-adapters-create {
 
+  .adapter-name-label {
+    max-width: 90%;
+    text-overflow: ellipsis;
+    overflow-x: auto;
+
+    &.adapter-canvas {
+      max-width: 85%;
+    }
+  }
+
   .tab-pane .panel-default {
     .panel-heading > span.panel-title { line-height: 30px; }
   }
